sandbox/output
OneHundredDoors.java:1: error: cannot find symbol
import static Door.OPEN;
              ^
  symbol: class Door
OneHundredDoors.java:1: error: static import only from classes and interfaces
import static Door.OPEN;
^
2 errors
